<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionPage"
    android:background="@drawable/news_background">
    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newsCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="130dp"

        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center"


        />
    <Button
        android:id="@+id/business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category"
        android:layout_marginTop="40dp"
        android:text="@string/business"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"/>
    <Button
        android:id="@+id/entertainment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/business"
        android:layout_marginTop="30dp"
        android:text="@string/entertainment"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"/>
    <Button
        android:id="@+id/science"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entertainment"
        android:layout_marginTop="30dp"
        android:text="@string/science"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"/>
    <Button
        android:id="@+id/sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/science"
        android:layout_marginTop="30dp"
        android:text="@string/sports"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"/>
    <Button
        android:id="@+id/technology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sports"
        android:layout_marginTop="30dp"
        android:text="@string/technology"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"/>

</androidx.constraintlayout.widget.ConstraintLayout>